[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
gloo-net = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4"
common = { version = "0.1.0", path = "../common" }
web-sys = "0.3.61"
